--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "lint": "standard",
     "pretest": "npm run lint",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "react": "^15.0.1",
+    "react-document-title": "^2.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.1.1"
   },
