--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.29.2",
     "react-document-title": "^2.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.1.1"
