--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tom Hanson",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
