--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "Portfolio",
   "main": "index.js",
   "scripts": {
+    "postinstall": "webpack --config webpack-prod.config.js --progress --colors",
     "lint": "standard",
-    "pretest": "npm run lint",
     "start": "node server.js",
+    "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tom Hanson",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/tmhn/tmhn.io.git"
+  },
+  "author": "Tom Hanson <itomhanson@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/tmhn/tmhn.io/issues"
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
