--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "compression": "^1.6.2",
     "express": "^4.13.4",
     "react": "^15.0.1",
     "react-bootstrap": "^0.29.2",
