--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.6",
     "compression": "^1.6.2",
     "express": "^4.13.4",
+    "jquery": "^2.2.4",
     "react": "^15.0.1",
     "react-bootstrap": "^0.29.2",
     "react-document-title": "^2.0.1",
@@ -35,6 +36,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.15"
   }
 }
