--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "compression": "^1.6.2",
+    "eslint-plugin-react": "^6.10.3",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
     "react": "^15.0.1",
@@ -37,6 +38,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
     "style-loader": "^0.13.1",
