--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": "webpack --config webpack-prod.config.js --progress --colors",
     "lint": "eslint",
-    "start": "node server.js",
+    "start": "node --harmony server.js",
     "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
