--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Portfolio",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack-prod.config.js",
     "postinstall": "webpack --config webpack-prod.config.js --progress --colors",
     "lint": "eslint",
     "start": "node --harmony server.js",
     "pretest": "npm run lint",
+    "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
