--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/tmhn/tmhn.io/issues"
   },
   "dependencies": {
+    "aphrodite": "^1.2.0",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "compression": "^1.6.2",
