--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "compression": "^1.6.2",
-    "eslint-plugin-react": "^6.10.3",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
+    "ramda": "^0.23.0",
     "react": "^15.0.1",
     "react-document-title": "^2.0.1",
     "react-dom": "^15.0.1",
